Switch to white background color for header. Bug with icons visible over header

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,6 +14,7 @@
     width:100%;
     position:fixed;
     top:0px;
+    background-color:white;
 }
 
 
